--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-target/*
-!target/*.jar
+**/target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
 
 # misc
 .DS_Store
