feat(shop-server) Add first integration test

--- a/shop-server/pom.xml
+++ b/shop-server/pom.xml
@@ -57,6 +57,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<!-- Can be usefull for avoid manual migration on database -->
 <!--		<dependency>-->
 <!--			<groupId>org.liquibase</groupId>-->
