--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -37,7 +37,13 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Build
-          run: ./mvnw compile package
+          run: ./mvnw compile
+
+        - name: Test
+          run: ./mvnw test
+
+        - name: Package
+          run: ./mvnw package
 
         - name: Docker build
           run: docker build .
