--- a/shop-server/src/main/resources/application-prod.properties
+++ b/shop-server/src/main/resources/application-prod.properties
@@ -1,6 +1,9 @@
 # port
 server.port=8080
 # database
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234
 # jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
