--- a/shop-client/package.json
+++ b/shop-client/package.json
@@ -27,6 +27,7 @@
         "react-select": "^5.6.1",
         "react-select-async-paginate": "^0.7.0",
         "typescript": "^4.9.3",
+        "usehooks-ts": "^2.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
