--- a/shop-client/package.json
+++ b/shop-client/package.json
@@ -13,15 +13,19 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/leaflet": "^1.9.8",
         "@types/node": "^16.18.3",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.9",
         "axios": "^1.1.3",
         "dayjs": "^1.11.6",
         "eslint-config-prettier": "^8.5.0",
+        "leaflet": "^1.9.4",
         "moment": "^2.29.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-head": "^3.4.2",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.4.3",
         "react-scripts": "5.0.1",
         "react-select": "^5.6.1",
@@ -30,7 +34,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "PORT=4200 react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
