--- a/shop-client/.env
+++ b/shop-client/.env
@@ -1,1 +1,2 @@
 REACT_APP_API=http://localhost:8080/api/v1
+REACT_APP_DEFAULT_CATEGORY_IAMGE_URL=https://cdn-icons-png.flaticon.com/512/3843/3843517.png
